Vorbis crash with ogg demuxer if codebook is incomplete
If a packet is skipped in headers, the libvorbis packet duration function does not check and dereferences a null mode description.
If a packet is skipped in headers, the libvorbis packet duration function does not check and dereferences a null mode description.
added Component::Demuxers: Ogg Severity::normal Type::bug Version::master git + 1 deleted label
changed milestone to %Bugs paradize
added Status::fixed label
changed milestone to %2.2.0
closed
VideoLAN code repository instance