demux: ogg: don't use incomplete vorbis headers (fix #12270)